--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Shubh Nivesh Capital | Investment & SIP Advisory</title>
 
-<meta name="description" content="Professional investment advisory, SIP planning and long-term wealth creation services in India.">
+<title>Shubh Nivesh Capital | Financial Planning, Mutual Funds & Insurance</title>
+
+<meta name="description" content="Shubh Nivesh Capital provides expert financial planning, mutual fund advisory and insurance solutions to help you build a secure financial future.">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="robots" content="index, follow">
 
@@ -13,47 +14,169 @@
 
 <body>
 
+<!-- HEADER -->
 <header>
   <div class="brand" onclick="location.href='index.html'">
     <img src="https://dummyimage.com/80x80/0a3d62/ffffff&text=₹">
     <strong>Shubh Nivesh Capital</strong>
   </div>
-  <nav>
-    <a href="about.html">About</a>
+
+  <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+
+  <nav id="nav">
+    <a href="index.html">Home</a>
+    <a href="about.html">About Us</a>
     <a href="services.html">Services</a>
+    <a href="financial-planning.html">Financial Planning</a>
+    <a href="insurance.html">Insurance</a>
     <a href="contact.html">Contact</a>
   </nav>
 </header>
 
-<div class="slider">
-  <div class="slide active" style="background-image:url('https://images.unsplash.com/photo-1554224155-8d04cb21cd6c')">
-    <div class="overlay">
-      <h1>Smart Investment Planning for Long-Term Wealth Creation</h1>
-    </div>
+<!-- HERO SECTION -->
+<section class="hero">
+  <div class="hero-content">
+    <h1>Smart Financial Planning for a Secure Future</h1>
+    <p>
+      We help individuals and families take informed financial decisions through
+      disciplined planning, expert guidance and long-term investment strategies.
+    </p>
+    <a class="btn" href="contact.html">Book Free Consultation</a>
   </div>
-  <div class="slide" style="background-image:url('https://images.unsplash.com/photo-1520607162513-77705c0f0d4a')">
-    <div class="overlay">
-      <h1>Build Wealth with Discipline & Trust</h1>
-    </div>
-  </div>
-</div>
+</section>
 
+<!-- SERVICES WE OFFER -->
 <section>
-  <h2>Client Reviews</h2>
-  <div class="reviews">
-    <div class="review-track">
-      <div class="review">⭐ Clear & honest advice – Amit K.</div>
-      <div class="review">⭐ Best SIP guidance – Neha S.</div>
-      <div class="review">⭐ Professional approach – Rahul P.</div>
+  <h2>Services We Offer</h2>
+  <p>
+    Our services are designed to simplify your financial journey and help you
+    achieve your life goals with confidence and clarity.
+  </p>
+
+  <div class="grid">
+    <div class="card">
+      <h3>Mutual Fund Advisory</h3>
+      <p>
+        Personalized mutual fund recommendations based on your income,
+        risk appetite and long-term financial objectives.
+      </p>
+    </div>
+
+    <div class="card">
+      <h3>SIP Planning</h3>
+      <p>
+        Structured SIP strategies that encourage disciplined investing and
+        help build wealth gradually over time.
+      </p>
+    </div>
+
+    <div class="card">
+      <h3>Financial Planning</h3>
+      <p>
+        Comprehensive planning for education, marriage, retirement and
+        wealth creation with a goal-based approach.
+      </p>
+    </div>
+
+    <div class="card">
+      <h3>Insurance Planning</h3>
+      <p>
+        Right insurance solutions to protect your family and finances
+        against unforeseen risks and uncertainties.
+      </p>
     </div>
   </div>
 </section>
 
+<!-- EXPERT OPINION -->
+<section>
+  <h2>Expert Opinion</h2>
+  <p>
+    Our philosophy is based on experience, research and practical understanding
+    of financial markets.
+  </p>
+  <blockquote>
+    “Successful investing is not about timing the market,
+    but about staying invested with discipline and patience.”
+  </blockquote>
+</section>
+
+<!-- CLIENT SPEAK -->
+<section>
+  <h2>Client Speak</h2>
+  <p>
+    Hear what our clients have to say about their experience with
+    Shubh Nivesh Capital.
+  </p>
+
+  <div class="reviews">
+    <div class="review-track">
+      <div class="review">
+        ⭐ “Clear guidance and honest advice. Helped me start SIP confidently.”
+        <br><strong>– Amit K.</strong>
+      </div>
+      <div class="review">
+        ⭐ “Very professional financial planning support. Highly recommended.”
+        <br><strong>– Neha S.</strong>
+      </div>
+      <div class="review">
+        ⭐ “Simple explanations and long-term focused strategy.”
+        <br><strong>– Rahul P.</strong>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- OUR PARTNERS -->
+<section>
+  <h2>Our Partners</h2>
+  <p>
+    We work with trusted financial institutions and service providers
+    to offer reliable and diversified solutions.
+  </p>
+
+  <div class="grid">
+    <div class="card">Mutual Fund AMCs</div>
+    <div class="card">Insurance Companies</div>
+    <div class="card">Financial Institutions</div>
+    <div class="card">Wealth Platforms</div>
+  </div>
+</section>
+
+<!-- WHO WE ARE -->
+<section>
+  <h2>Who We Are</h2>
+  <p>
+    Shubh Nivesh Capital is a financial advisory platform committed to
+    transparency, ethics and long-term client success.
+  </p>
+  <p>
+    We focus on understanding your goals, educating you about options,
+    and guiding you towards suitable financial decisions.
+  </p>
+
+  <a class="btn" href="about.html">Know More About Us</a>
+</section>
+
+<!-- QUICK CONTACT -->
+<section>
+  <h2>Start Your Financial Journey Today</h2>
+  <p>
+    Take the first step towards organised and confident financial planning
+    with expert guidance.
+  </p>
+  <a class="btn" href="contact.html">Get Free Consultation</a>
+</section>
+
+<!-- FOOTER -->
 <footer>
-  <p>Disclaimer: Investments are subject to market risks.</p>
+  <p>
+    Disclaimer: Investments are subject to market risks. Past performance
+    does not guarantee future returns.
+  </p>
   <p>© 2026 Shubh Nivesh Capital</p>
 </footer>
 
-<script defer src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
