--- a/index.html
+++ b/index.html
@@ -102,30 +102,58 @@
 </section>
 
 <!-- CLIENT SPEAK -->
+<!-- CLIENT SPEAK (ADVANCED & LARGE) -->
 <section>
-  <h2>Client Speak</h2>
+  <h2>What Our Clients Say</h2>
   <p>
-    Hear what our clients have to say about their experience with
-    Shubh Nivesh Capital.
+    Our clients trust us for honest guidance, simple explanations and
+    long-term focused financial planning.
   </p>
 
-  <div class="reviews">
+  <div class="reviews-large">
     <div class="review-track">
-      <div class="review">
-        ⭐ “Clear guidance and honest advice. Helped me start SIP confidently.”
-        <br><strong>– Amit K.</strong>
+
+      <div class="review-card">
+        <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Client Review">
+        <div class="review-content">
+          <h3>Amit Kumar</h3>
+          <span>Salaried Professional, Delhi</span>
+          <p>
+            “Shubh Nivesh Capital helped me understand mutual funds in a very
+            simple way. Their SIP planning gave me confidence to invest for
+            long-term goals.”
+          </p>
+        </div>
       </div>
-      <div class="review">
-        ⭐ “Very professional financial planning support. Highly recommended.”
-        <br><strong>– Neha S.</strong>
+
+      <div class="review-card">
+        <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="Client Review">
+        <div class="review-content">
+          <h3>Neha Sharma</h3>
+          <span>Working Professional, Patna</span>
+          <p>
+            “Very professional and transparent approach. I received proper
+            financial planning guidance instead of product pushing.”
+          </p>
+        </div>
       </div>
-      <div class="review">
-        ⭐ “Simple explanations and long-term focused strategy.”
-        <br><strong>– Rahul P.</strong>
+
+      <div class="review-card">
+        <img src="https://randomuser.me/api/portraits/men/68.jpg" alt="Client Review">
+        <div class="review-content">
+          <h3>Rahul Verma</h3>
+          <span>Business Owner, Lucknow</span>
+          <p>
+            “Clear explanations, disciplined strategy and continuous support.
+            I feel confident about my financial future now.”
+          </p>
+        </div>
       </div>
+
     </div>
   </div>
 </section>
+
 
 <!-- OUR PARTNERS -->
 <section>
