--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
 </head>
 <body>
 
+<!-- ===== HEADER ===== -->
 <header class="top-header">
-  <!-- Left: Logo + Name -->
-  <div class="logo-section">
+  <!-- Logo + Brand (Clickable Home) -->
+  <a href="index.html" class="logo-section">
     <img src="logo.png" alt="Shubh Nivesh Logo" class="logo">
     <div class="brand-text">
       <h1>Shubh Nivesh</h1>
       <p>A Complete Financial Solutions</p>
     </div>
-  </div>
+  </a>
 
-  <!-- Right: Contact + Login -->
+  <!-- Right Side -->
   <div class="header-right">
     <div class="contact-info">
       <span>📞 +91 98765 43210</span>
@@ -27,6 +28,7 @@
   </div>
 </header>
 
+<!-- ===== NAVBAR ===== -->
 <nav class="navbar">
   <ul class="nav-menu">
     <li><a href="#">Home</a></li>
@@ -46,6 +48,5 @@
   </ul>
 </nav>
 
-<script src="script.js"></script>
 </body>
 </html>
