Reorganize navbar and add hero slider section

--- a/index.html
+++ b/index.html
@@ -26,33 +26,7 @@
 </div>
 
 <!-- NAVBAR -->
-<nav class="navbar">
-  <section class="hero-slider">
-  <div class="slide active" style="background-image: url('https://images.unsplash.com/photo-1554224155-6726b3ff858f');">
-    <div class="hero-content">
-      <h2>Secure Your Financial Future</h2>
-      <p>Smart financial planning for a worry-free tomorrow</p>
-      <a href="#" class="hero-btn">Enquire Now</a>
-    </div>
-  </div>
-
-  <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1605902711622-cfb43c4437d1');">
-    <div class="hero-content">
-      <h2>Plan Today. Relax Tomorrow.</h2>
-      <p>Personalized investment & insurance solutions</p>
-      <a href="#" class="hero-btn">Enquire Now</a>
-    </div>
-  </div>
-
-  <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1556761175-5973dc0f32e7');">
-    <div class="hero-content">
-      <h2>Complete Financial Solutions</h2>
-      <p>Mutual funds, insurance & wealth planning under one roof</p>
-      <a href="#" class="hero-btn">Enquire Now</a>
-    </div>
-  </div>
-</section>
-
+<nav class="navbar"
   <ul class="nav-menu">
     <li class="active"><a href="#">Home</a></li>
     <li><a href="#">About Us</a></li>
@@ -77,6 +51,31 @@
     <li><a href="#">Mutual Fund</a></li>
   </ul>
 </nav>
+   <section class="hero-slider">
+  <div class="slide active" style="background-image: url('https://images.unsplash.com/photo-1554224155-6726b3ff858f');">
+    <div class="hero-content">
+      <h2>Secure Your Financial Future</h2>
+      <p>Smart financial planning for a worry-free tomorrow</p>
+      <a href="#" class="hero-btn">Enquire Now</a>
+    </div>
+  </div>
+
+  <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1605902711622-cfb43c4437d1');">
+    <div class="hero-content">
+      <h2>Plan Today. Relax Tomorrow.</h2>
+      <p>Personalized investment & insurance solutions</p>
+      <a href="#" class="hero-btn">Enquire Now</a>
+    </div>
+  </div>
+
+  <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1556761175-5973dc0f32e7');">
+    <div class="hero-content">
+      <h2>Complete Financial Solutions</h2>
+      <p>Mutual funds, insurance & wealth planning under one roof</p>
+      <a href="#" class="hero-btn">Enquire Now</a>
+    </div>
+  </div>
+</section>
 
 <script src="script.js"></script>
 </body>
