--- a/index.html
+++ b/index.html
@@ -2,16 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Shubh Nivesh</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Shubh Nivesh | A Complete Financial Solutions</title>
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-<!-- HEADER -->
+<!-- ================= HEADER ================= -->
 <header class="main-header">
-  <div class="header-left">
+  <div class="header-left logo-animate">
     <img src="https://dummyimage.com/45x45/c62828/ffffff&text=S" class="logo">
     <div class="brand">
       <h1>Shubh Nivesh</h1>
@@ -20,15 +18,15 @@
   </div>
 
   <div class="header-right">
-    <a href="tel:+919899930283" class="icon-btn">📞</a>
-    <a href="mailto:info@shubhnivesh.com" class="icon-btn">✉</a>
+    <a href="tel:+919899930283" class="icon-btn pulse">📞</a>
+    <a href="mailto:info@shubhnivesh.com" class="icon-btn pulse">✉</a>
     <button class="login-btn">LOGIN</button>
     <div class="hamburger" onclick="toggleMenu()">☰</div>
   </div>
 </header>
 
-<!-- MENU -->
-<nav class="mobile-menu" id="menu">
+<!-- ================= HAMBURGER MENU ================= -->
+<nav class="mobile-menu" id="mobileMenu">
   <a href="#">Home</a>
   <a href="#">About Us</a>
 
@@ -47,9 +45,10 @@
   <a href="#">Mutual Fund</a>
 </nav>
 
-<!-- HERO -->
+<!-- ================= HERO SECTION ================= -->
 <section class="hero-slider">
 
+  <!-- Enquire Button (fixed inside hero) -->
   <a href="#" class="enquire-hero-btn">Enquire Now</a>
 
   <div class="slide active" style="background-image:url('https://images.unsplash.com/photo-1554224155-6726b3ff858f');">
@@ -69,7 +68,7 @@
   <div class="slide" style="background-image:url('https://images.unsplash.com/photo-1521791136064-7986c2920216');">
     <div class="hero-content">
       <h2>Complete Protection</h2>
-      <p>For Your Loved Ones</p>
+      <p>For Your Loved Ones – Buy Life Insurance</p>
     </div>
   </div>
 
