--- a/index.html
+++ b/index.html
@@ -1,81 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Shubh Nivesh | A Complete Financial Solutions</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
 <!-- ================= HEADER ================= -->
-<header class="main-header">
-  <div class="header-left logo-animate">
-    <img src="https://dummyimage.com/45x45/c62828/ffffff&text=S" class="logo">
+<header class="header">
+  <div class="header-left">
+    <img src="https://dummyimage.com/48x48/c62828/ffffff&text=S" alt="Logo">
     <div class="brand">
       <h1>Shubh Nivesh</h1>
-      <span>A Complete Financial Solutions</span>
+      <p>A Complete Financial Solutions</p>
     </div>
   </div>
 
   <div class="header-right">
-    <a href="tel:+919899930283" class="icon-btn pulse">📞</a>
-    <a href="mailto:info@shubhnivesh.com" class="icon-btn pulse">✉</a>
-    <button class="login-btn">LOGIN</button>
+    <a href="tel:+919899930283" class="icon">📞</a>
+    <a href="mailto:info@shubhnivesh.com" class="icon">✉</a>
+    <button class="login-btn">Login</button>
     <div class="hamburger" onclick="toggleMenu()">☰</div>
   </div>
 </header>
 
-<!-- ================= HAMBURGER MENU ================= -->
-<nav class="mobile-menu" id="mobileMenu">
+<!-- ================= MENU ================= -->
+<nav class="menu" id="menu">
   <a href="#">Home</a>
   <a href="#">About Us</a>
-
-  <details>
-    <summary>Financial Planning</summary>
-    <a href="#">Retirement Planning</a>
-    <a href="#">Tax Planning</a>
-  </details>
-
-  <details>
-    <summary>Insurance</summary>
-    <a href="#">Life Insurance</a>
-    <a href="#">Car Insurance</a>
-  </details>
-
+  <a href="#">Financial Planning</a>
+  <a href="#">Insurance</a>
   <a href="#">Mutual Fund</a>
 </nav>
 
-<!-- ================= HERO SECTION ================= -->
-<section class="hero-slider">
+<!-- ================= HERO ================= -->
+<section class="hero">
 
-  <!-- Enquire Button (fixed inside hero) -->
-  <a href="#" class="enquire-hero-btn">Enquire Now</a>
-
+  <!-- SLIDE 1 -->
   <div class="slide active" style="background-image:url('https://images.unsplash.com/photo-1554224155-6726b3ff858f');">
     <div class="hero-content">
-      <h2>Financial Security</h2>
-      <p>Best Insurance Plans</p>
+      <h2>Financial Security & Stability</h2>
+      <p>
+        Build a strong financial foundation with carefully designed insurance
+        plans that protect your income, savings, and future goals.
+      </p>
+      <a href="#" class="hero-btn">Enquire Now</a>
     </div>
   </div>
 
+  <!-- SLIDE 2 -->
   <div class="slide" style="background-image:url('https://images.unsplash.com/photo-1503376780353-7e6692767b70');">
     <div class="hero-content">
-      <h2>Car Insurance</h2>
-      <p>Check Latest Plans</p>
+      <h2>Car Insurance Made Simple</h2>
+      <p>
+        Compare the latest car insurance plans and enjoy complete coverage,
+        cashless claims, and total peace of mind on every drive.
+      </p>
+      <a href="#" class="hero-btn">Enquire Now</a>
     </div>
   </div>
 
+  <!-- SLIDE 3 -->
   <div class="slide" style="background-image:url('https://images.unsplash.com/photo-1521791136064-7986c2920216');">
     <div class="hero-content">
-      <h2>Complete Protection</h2>
-      <p>For Your Loved Ones – Buy Life Insurance</p>
+      <h2>Complete Protection for Loved Ones</h2>
+      <p>
+        Secure your family’s future with reliable life insurance solutions
+        that provide long-term protection and financial confidence.
+      </p>
+      <a href="#" class="hero-btn">Enquire Now</a>
     </div>
   </div>
 
+  <!-- SLIDE 4 -->
   <div class="slide" style="background-image:url('https://images.unsplash.com/photo-1500530855697-b586d89ba3ee');">
     <div class="hero-content">
       <h2>Enjoy Every Moment of Life</h2>
-      <p>Plan Your Retirement</p>
+      <p>
+        Plan your retirement smartly so you can live stress-free, independent,
+        and financially secure throughout your golden years.
+      </p>
+      <a href="#" class="hero-btn">Enquire Now</a>
     </div>
   </div>
 
